<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MathAssistant</string>
    <string name="action_settings">Настройки</string>
    <string name="numbers">Числа</string>
    <string name="equations">Уравнения</string>
    <string name="progression">Прогрессия</string>
    <string name="trigonometry">Триганометрия</string>
    <string name="planimetry">Планиметрия</string>
    <string name="stereometry">Стереометрия</string>
    <string name="matrix">Матрицы</string>
    <string name="slau">Системы линейных уравнений</string>
    <string name="vector">Векторы</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
