<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/numbers"
                android:id="@+id/button1"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/equations"
                android:id="@+id/button2"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/vector"
                android:id="@+id/button3"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/progression"
                android:id="@+id/button4"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/slau"
                android:id="@+id/button5"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/trigonometry"
                android:id="@+id/button6"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/matrix"
                android:id="@+id/button7"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/planimetry"
                android:id="@+id/button8"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/stereometry"
                android:id="@+id/button9"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/button10"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
